Fix [BBS-8] : Add Sentence BioBERT embeddings
Create a new button to use the model Sentence BioBERT
+ the method to compute the embeddings.

--- a/notebooks/cord19q_extra/Information Retrieval - PAFE.ipynb
+++ b/notebooks/cord19q_extra/Information Retrieval - PAFE.ipynb
@@ -87,6 +87,9 @@
     "from nltk.corpus import stopwords\n",
     "from string import punctuation\n",
     "from sentence_transformers import SentenceTransformer\n",
+    "from transformers import AutoTokenizer, AutoModelWithLMHead\n",
+    "from pytorch_pretrained_bert import BertConfig, BertForPreTraining, BertTokenizer, BertModel\n",
+    "import torch\n",
     "\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
@@ -365,6 +368,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SBioBERT(torch.nn.Module):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.biobert_model = AutoModelWithLMHead.from_pretrained(\"gsarti/biobert-nli\").bert\n",
+    "        self.tokenizer = AutoTokenizer.from_pretrained(\"gsarti/biobert-nli\")\n",
+    "        \n",
+    "    def preprocess_sentence(self, sentence):\n",
+    "        # Add the special tokens.\n",
+    "        marked_text = \"[CLS] \" + sentence + \" [SEP]\"\n",
+    "\n",
+    "        # Split the sentence into tokens.\n",
+    "        tokenized_text = self.tokenizer.tokenize(marked_text)\n",
+    "\n",
+    "        # Map the token strings to their vocabulary indices.\n",
+    "        indexed_tokens = self.tokenizer.convert_tokens_to_ids(tokenized_text)\n",
+    "\n",
+    "        # Mark each of the tokens as belonging to sentence \"1\".\n",
+    "        segments_ids = [1] * len(tokenized_text)\n",
+    "\n",
+    "        # Convert inputs to PyTorch tensors\n",
+    "        tokens_tensor = torch.tensor([indexed_tokens])\n",
+    "        segments_tensors = torch.tensor([segments_ids])\n",
+    "    \n",
+    "        return tokens_tensor, segments_tensors\n",
+    "        \n",
+    "        \n",
+    "    def encode(self, sentences):\n",
+    "        preprocessed_sentences = [self.preprocess_sentence(sentence)\n",
+    "                                  for sentence in sentences]\n",
+    "        \n",
+    "        results = []\n",
+    "        for tokens_tensor, segments_tensors in preprocessed_sentences:\n",
+    "            with torch.no_grad():\n",
+    "                encoded_layers , _ = self.biobert_model(tokens_tensor, segments_tensors)\n",
+    "                sentence_encoding = encoded_layers[-1].squeeze().mean(axis=0)\n",
+    "                results.append(sentence_encoding.detach().cpu().numpy())\n",
+    "                            \n",
+    "        return results\n",
+    "\n",
+    "sbiobert = SBioBERT()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -417,6 +470,9 @@
     "    elif embedding_name == 'SBERT':\n",
     "        return np.stack(embedding_model.encode(sentences), axis=0)\n",
     "    \n",
+    "    elif embedding_name == 'SBIOBERT':\n",
+    "        return np.stack(embedding_model.encode(sentences), axis=0)\n",
+    "    \n",
     "    elif embedding_name == 'BSV':\n",
     "        preprocessed = [bsv_preprocess(x) for x in sentences]\n",
     "        return embedding_model.embed_sentences(preprocessed)\n",
@@ -432,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EMBEDDINGS_NAMES = ['USE', 'SBERT', 'BSV']"
+    "EMBEDDINGS_NAMES = ['USE', 'SBERT', 'BSV', 'SBIOBERT']"
    ]
   },
   {
@@ -452,7 +508,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embeddings_syns = np.load(embeddings_path / 'sentence_embeddings_merged_synonyms.npz')"
+    "embeddings_syns = dict()\n",
+    "for embeddings_name in EMBEDDINGS_NAMES:\n",
+    "    embeddings_syns[embeddings_name] = np.load(embeddings_path / f'{embeddings_name}_sentence_embeddings_merged_synonyms.npz')[embeddings_name]"
    ]
   },
   {
@@ -595,9 +653,9 @@
     "\n",
     "# Select model to compute Sentence Embeddings\n",
     "my_widgets['sent_embedder'] = widgets.ToggleButtons(\n",
-    "    options=[ 'USE', 'SBERT', 'BSV'],\n",
+    "    options=[ 'USE', 'SBERT', 'BSV', 'SBIOBERT'],\n",
     "    description='Model for Sentence Embedding',\n",
-    "    tooltips=['Universal Sentence Encoder', 'Sentence BERT', 'BioSentVec'],\n",
+    "    tooltips=['Universal Sentence Encoder', 'Sentence BERT', 'BioSentVec', 'Sentence BioBERT'],\n",
     ")\n",
     "\n",
     "# Select n. of top results to return\n",
