--- a/notebooks/cord19q_extra/Generate Sentence Embeddings - PAFE.ipynb
+++ b/notebooks/cord19q_extra/Generate Sentence Embeddings - PAFE.ipynb
@@ -35,7 +35,8 @@
     "from nltk import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
     "from string import punctuation\n",
-    "from sentence_transformers import SentenceTransformer"
+    "from sentence_transformers import SentenceTransformer\n",
+    "from transformers import AutoTokenizer, AutoModelWithLMHead"
    ]
   },
   {
@@ -355,13 +356,14 @@
     "        model_pre_training.load_state_dict(state_dict)\n",
     "        \n",
     "        self.biobert_model = model_pre_training.bert\n",
-    "        self.tokenizer = BertTokenizer.from_pretrained(\"bert-base-cased\")\n",
+    "        self.tokenizer = BertTokenizer.from_pretrained(\"bert-base-cased\", max_len=512)\n",
     "        \n",
     "    def preprocess_sentence(self, sentence):\n",
     "        # Add the special tokens.\n",
     "        marked_text = \"[CLS] \" + sentence + \" [SEP]\"\n",
     "\n",
     "        # Split the sentence into tokens.\n",
+    "        #tokenized_text = self.tokenizer.tokenize(marked_text)\n",
     "        tokenized_text = self.tokenizer.tokenize(marked_text)\n",
     "\n",
     "        # Map the token strings to their vocabulary indices.\n",
@@ -400,6 +402,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SBioBERT2(torch.nn.Module):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.biobert_model = AutoModelWithLMHead.from_pretrained(\"gsarti/biobert-nli\").bert\n",
+    "        self.tokenizer = AutoTokenizer.from_pretrained(\"gsarti/biobert-nli\")\n",
+    "        \n",
+    "    def preprocess_sentence(self, sentence):\n",
+    "        # Add the special tokens.\n",
+    "        marked_text = \"[CLS] \" + sentence + \" [SEP]\"\n",
+    "\n",
+    "        # Split the sentence into tokens.\n",
+    "        tokenized_text = self.tokenizer.tokenize(marked_text)\n",
+    "\n",
+    "        # Map the token strings to their vocabulary indices.\n",
+    "        indexed_tokens = self.tokenizer.convert_tokens_to_ids(tokenized_text)\n",
+    "\n",
+    "        # Mark each of the tokens as belonging to sentence \"1\".\n",
+    "        segments_ids = [1] * len(tokenized_text)\n",
+    "\n",
+    "        # Convert inputs to PyTorch tensors\n",
+    "        tokens_tensor = torch.tensor([indexed_tokens])\n",
+    "        segments_tensors = torch.tensor([segments_ids])\n",
+    "    \n",
+    "        return tokens_tensor, segments_tensors\n",
+    "        \n",
+    "        \n",
+    "    def encode(self, sentences):\n",
+    "        device = next(self.biobert_model.parameters()).device\n",
+    "        preprocessed_sentences = [self.preprocess_sentence(sentence)\n",
+    "                                  for sentence in sentences]\n",
+    "        \n",
+    "        results = []\n",
+    "        for tokens_tensor, segments_tensors in preprocessed_sentences:\n",
+    "            with torch.no_grad():\n",
+    "                tokens_tensor = tokens_tensor.to(device)\n",
+    "                segments_tensors = segments_tensors.to(device)\n",
+    "                encoded_layers , _ = self.biobert_model(tokens_tensor, segments_tensors)\n",
+    "                sentence_encoding = encoded_layers[-1].squeeze().mean(axis=0)\n",
+    "                results.append(sentence_encoding.detach().cpu().numpy())\n",
+    "                \n",
+    "                del tokens_tensor, segments_tensors\n",
+    "            \n",
+    "        return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-14T15:34:58.983040Z",
@@ -413,6 +468,19 @@
     "bio_embedder = bio_embedder.to(device)\n",
     "bio_embeddings = bio_embedder.encode(sentences)\n",
     "np.stack(bio_embeddings).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "bio_embedder2 = SBioBERT2()\n",
+    "bio_embedder2 = bio_embedder2.to(device)\n",
+    "bio_embeddings2 = bio_embedder2.encode(sentences)\n",
+    "np.stack(bio_embeddings2).shape"
    ]
   },
   {
