Add metadata filtering to the widget
- Solve [BBS-5]
- Solve [BBS-18]

--- a/notebooks/cord19q_extra/Information Retrieval - PAFE.ipynb
+++ b/notebooks/cord19q_extra/Information Retrieval - PAFE.ipynb
@@ -63,6 +63,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import bbsearch as bbs\n",
+    "import bbsearch.sql\n",
+    "from bbsearch.sql import ArticleConditioner, SentenceConditioner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import textwrap\n",
     "import hashlib\n",
     "import time\n",
@@ -685,6 +696,30 @@
     "    description='Query'\n",
     ")\n",
     "\n",
+    "# Filtering widgets\n",
+    "# my_widgets['has_title'] = widgets.Checkbox(\n",
+    "#     description=\"Require Title\",\n",
+    "#     value=True)\n",
+    "# my_widgets['has_authors'] = widgets.Checkbox(\n",
+    "#     description=\"Require Authors\",\n",
+    "#     value=True)\n",
+    "# my_widgets['has_abstract'] = widgets.Checkbox(\n",
+    "#     description=\"Require Abstract\",\n",
+    "#     value=False)\n",
+    "my_widgets['has_journal'] = widgets.Checkbox(\n",
+    "    description=\"Require Journal\",\n",
+    "    value=False)\n",
+    "# my_widgets['has_doi'] = widgets.Checkbox(\n",
+    "#     description=\"Require DOI\",\n",
+    "#     value=False)\n",
+    "my_widgets['date_range'] = widgets.IntRangeSlider(\n",
+    "    description=\"Date Range:\",\n",
+    "    continuous_update=False,\n",
+    "    min=1900,\n",
+    "    max=2020,\n",
+    "    value=(1900, 2020),\n",
+    "    layout=widgets.Layout(width='80ch'))\n",
+    "\n",
     "# Enter Deprioritization Query\n",
     "my_widgets['deprioritize_text'] = widgets.Textarea(\n",
     "    value='',\n",
@@ -766,12 +801,57 @@
     "                                                  eval(sentence_embedder_name.lower()))\n",
     "                print(f'{time.time()-t0:.2f} s.')                \n",
     "\n",
-    "            print('Computing similarities...', end=' ')\n",
-    "\n",
+    "            # Process date range and has-journal filtering\n",
+    "            has_journal = my_widgets['has_journal'].value\n",
+    "            date_range = my_widgets['date_range'].value\n",
+    "            \n",
+    "            # Apply article conditions\n",
+    "            article_conditions = [\n",
+    "                ArticleConditioner.get_date_range_condition(date_range)]\n",
+    "            if has_journal:\n",
+    "                article_conditions.append(ArticleConditioner.get_has_journal_condition())\n",
+    "            restricted_article_ids = bbs.sql.get_ids_by_condition(article_conditions, 'articles', db)\n",
+    "            \n",
+    "            # Apply sentence conditions\n",
+    "            all_aticle_ids_str = ', '.join([f\"'{sha}'\" for sha in restricted_article_ids])\n",
+    "            sentence_conditions = [\n",
+    "                f\"Article IN ({all_aticle_ids_str})\",\n",
+    "                SentenceConditioner.get_restrict_to_tag_condition(\"COVID-19\")\n",
+    "            ]\n",
+    "            excluded_words = [x for x in exclusion_text.lower().split('\\n') if x] # remove empty strings\n",
+    "            sentence_conditions += [\n",
+    "                SentenceConditioner.get_word_exclusion_condition(word)\n",
+    "                for word in excluded_words]\n",
+    "            restricted_sentence_ids = bbs.sql.get_ids_by_condition(sentence_conditions, 'sections', db)\n",
+    "            \n",
+    "#             n_articles = db.execute(\"SELECT COUNT(*) FROM articles\").fetchone()\n",
+    "#             n_sentences = db.execute(\"SELECT COUNT(*) FROM sections\").fetchone()\n",
+    "#             n_articles = n_articles[0]\n",
+    "#             n_sentences = n_sentences[0]\n",
+    "#             frac_articles = len(restricted_article_ids) / n_articles\n",
+    "#             frac_sentences = len(restricted_sentence_ids) / n_sentences\n",
+    "#             print(f\"Selected {len(restricted_article_ids)} of {n_articles} \"\n",
+    "#                   f\"articles ({frac_articles * 100:.1f}%).\")\n",
+    "#             print(f\"Selected {len(restricted_sentence_ids)} of {n_sentences} \"\n",
+    "#                   f\"sentences ({frac_sentences * 100:.1f})%.\")\n",
+    "            \n",
+    "            \n",
+    "            # Load sentence embedding from the npz file\n",
     "            if merge_synonyms:\n",
     "                arr = embeddings_syns[sentence_embedder_name]\n",
     "            else:\n",
     "                arr = embeddings[sentence_embedder_name]\n",
+    "            \n",
+    "            # Apply date-range and has-journal filtering to arr\n",
+    "            idx_col = arr[:, 0]\n",
+    "            mask = np.isin(idx_col, restricted_sentence_ids)\n",
+    "            arr = arr[mask]\n",
+    "            if len(arr) == 0:\n",
+    "                print(\"No documents left after filtering!\")\n",
+    "                return\n",
+    "            \n",
+    "            # Compute similarities\n",
+    "            print('Computing similarities...', end=' ')\n",
     "            sentence_ids, embeddings_corpus = arr[:, 0], arr[:, 1:]\n",
     "            similarities_query = cosine_similarity(X=embedding_query, Y=embeddings_corpus).squeeze()\n",
     "\n",
@@ -794,31 +874,15 @@
     "            print(f'{time.time()-t0:.2f} s.')\n",
     "\n",
     "            print('Ranking documents...     ', end=' ')\n",
-    "\n",
-    "            # SUBSTRING EXCLUSIONS\n",
-    "            excluded_words = [x for x in exclusion_text.lower().split('\\n') if x] # remove empty strings\n",
-    "\n",
     "            indices = np.argsort(-similarities)\n",
-    "            indices_without_excluded = []\n",
+    "            indices = indices[:top_n_results]\n",
     "\n",
-    "            ix = 0\n",
-    "            while len(indices_without_excluded) < top_n_results:\n",
-    "                sentence_text = db.execute('SELECT Text FROM sections WHERE Id = ?', \n",
-    "                                           [sentence_ids[indices[ix]]]).fetchall()[0][0].lower()\n",
-    "                is_contained = any([w in sentence_text for w in excluded_words])\n",
-    "\n",
-    "                if not is_contained:\n",
-    "                    indices_without_excluded.append(indices[ix])\n",
-    "\n",
-    "                ix += 1\n",
-    "\n",
-    "\n",
-    "            print(f'{time.time()-t0:.2f} s. Excluded {ix - top_n_results} items based on substrings.')\n",
+    "            print(f'{time.time()-t0:.2f} s.')\n",
     "\n",
     "            print(f'\\nInvestigating: {query_text[0]}\\n')\n",
     "\n",
-    "            for i, (sentence_id_, sim_) in enumerate(zip(sentence_ids[indices_without_excluded], \n",
-    "                                                         similarities[indices_without_excluded])):\n",
+    "            for i, (sentence_id_, sim_) in enumerate(zip(sentence_ids[indices], \n",
+    "                                                         similarities[indices])):\n",
     "                article_sha, section_name, text = \\\n",
     "                db.execute('SELECT Article, Name, Text FROM sections WHERE Id = ?', \n",
     "                           [sentence_id_]).fetchall()[0]\n",
@@ -1010,7 +1074,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
