Fix [BBS-14]: Reduce options in Search Tool
Hide some possibilities for the user in the widget:
- Hide USE and SBERT models
- Hide Substring Exclusion
- Hide merge synonyms
- Hide some deprioritization strength ('weak' and 'strong')

--- a/notebooks/cord19q_extra/Information Retrieval - PAFE.ipynb
+++ b/notebooks/cord19q_extra/Information Retrieval - PAFE.ipynb
@@ -760,6 +760,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Too many possibilities and parameters choices (Feedback for Emmanuelle, Skrikanth and Henry) \n",
+    "# Remove the exclusion_text\n",
+    "my_widgets.pop('exclusion_text')\n",
+    "# Remove the merge_synonyms option\n",
+    "my_widgets.pop('merge_synonyms')\n",
+    "# Remove some models (USE and SBERT)\n",
+    "my_widgets['sent_embedder'] = widgets.ToggleButtons(\n",
+    "    options=[ 'BSV', 'SBIOBERT'],\n",
+    "    description='Model for Sentence Embedding',\n",
+    "    tooltips=['BioSentVec', 'Sentence BioBERT'],\n",
+    ")\n",
+    "# Remove some depriorization strenght\n",
+    "my_widgets['deprioritize_strength'] = widgets.ToggleButtons(\n",
+    "        options=['None', 'Mild', 'Stronger'],\n",
+    "        disabled=False,\n",
+    "        button_style='info',\n",
+    "        style={'description_width': 'initial', 'button_width': '80px'},\n",
+    "        description='Deprioritization strength',\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class HtmlReport:\n",
     "    def __init__(self):\n",
     "        self.report = None\n",
@@ -772,13 +799,13 @@
     "            t0 = time.time()\n",
     "\n",
     "            sentence_embedder_name = my_widgets['sent_embedder'].value\n",
-    "            merge_synonyms = my_widgets['merge_synonyms'].value\n",
+    "            merge_synonyms = my_widgets['merge_synonyms'].value if 'merge_synonyms' in my_widgets.keys() else False\n",
     "            top_n_results = my_widgets['top_results'].value\n",
     "            print_whole_paragraph = my_widgets['print_paragraph'].value\n",
     "            query_text = my_widgets['query_text'].value\n",
     "            deprioritize_text = my_widgets['deprioritize_text'].value\n",
     "            deprioritize_strength = my_widgets['deprioritize_strength'].value\n",
-    "            exclusion_text = my_widgets['exclusion_text'].value\n",
+    "            exclusion_text = my_widgets['exclusion_text'].value if 'exclusion_text' in my_widgets.keys() else ''\n",
     "\n",
     "\n",
     "            if merge_synonyms:\n",
@@ -1074,7 +1101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
