Fix paragraph retrieval
The problem was that the signature of the function
`highlight_in_paragraph` in `AllData` had changed
but the code in widget was not updated.

This caused an exception in the widget, but the exception
is caught in the widget code. Unfortunately, in the error
handling the message indicating the error was printed between
angled brackets '<' and '>', and upon formatting as HTML
was ignored since it was not a valid HTML tag. Therefore
the error remained invisible. Now the angled brackets were
removed from the error message, and one should be able
to see errors that occur during the paragraph retrieval
in the future.

Some other changes that were done:
- Adjust a logging message text
- Add logging configuration to the widget notebook

--- a/notebooks/search_widget.ipynb
+++ b/notebooks/search_widget.ipynb
@@ -16,12 +16,38 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from pathlib import Path\n",
+    "import logging\n",
+    "import pathlib\n",
     "\n",
-    "# New imports\n",
-    "from bbsearch.data import AllData\n",
-    "from bbsearch.models import AllModels\n",
-    "from bbsearch.widget import Widget"
+    "import bbsearch as bbs\n",
+    "import bbsearch.data\n",
+    "import bbsearch.models\n",
+    "import bbsearch.widget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set up logging levels\n",
+    "- `WARNING` level as the default\n",
+    "- `INFO` level for the `data` and `models` BBS modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Root logger\n",
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.WARNING)\n",
+    "\n",
+    "# Loggers for BBS modules\n",
+    "bbs.data.logger.setLevel(logging.INFO)\n",
+    "bbs.models.logger.setLevel(logging.INFO)\n",
+    "bbs.widget.logger.setLevel(logging.INFO)"
    ]
   },
   {
@@ -37,8 +63,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = Path(\"/raid/covid_data/data/2020-04-08\")\n",
-    "assets_path = Path(\"/raid/covid_data/assets\")"
+    "data_path = pathlib.Path(\"/raid/covid_data/data/2020-04-08\")\n",
+    "assets_path = pathlib.Path(\"/raid/covid_data/assets\")"
    ]
   },
   {
@@ -47,8 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_data = AllData(data_path, assets_path)\n",
-    "all_models = AllModels(all_data)"
+    "all_data = bbs.data.AllData(data_path, assets_path)\n",
+    "all_models = bbs.models.AllModels(all_data)"
    ]
   },
   {
@@ -64,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbs_widget = Widget(all_data, all_models)\n",
+    "bbs_widget = bbs.widget.Widget(all_data, all_models)\n",
     "bbs_widget.display()"
    ]
   },
