Create Table sentences
Create some utils function to generate the sentences method.
+ Add spacy in the requirements.txt file (needed for the sentences
boundary detection) + Script to generate the sentences table

--- a/notebooks/cord19q_extra/Create_Database.ipynb
+++ b/notebooks/cord19q_extra/Create_Database.ipynb
@@ -6,10 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "from multiprocessing import Pool\n",
+    "import os\n",
     "from pathlib import Path\n",
     "import sqlite3\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from spacy.lang.en import English\n",
+    "\n",
+    "from bbsearch.utils import get_tag_and_sentences, define_nlp, update_covid19_tag, insert_into_sentences"
    ]
   },
   {
@@ -59,7 +66,7 @@
    "outputs": [],
    "source": [
     "df2 = pd.DataFrame(data=df[['cord_uid', 'sha']])\n",
-    "df2 = df2.set_index(['cord_uid']).apply(lambda x: x.str.split(';').explode()).reset_index()\n",
+    "df2 = df2.set_index(['cord_uid']).apply(lambda x: x.str.split('; ').explode()).reset_index()\n",
     "df2.rename(columns={'cord_uid':'article_id', 'sha':'sha'}, inplace=True)"
    ]
   },
@@ -204,6 +211,7 @@
     "            covidence_id TEXT, \n",
     "            has_pdf_parse BOOLEAN,\n",
     "            has_pmc_xml_parse BOOLEAN, \n",
+    "            has_covid19_tag BOOLEAN DEFAULT False,\n",
     "            fulltext_directory TEXT, \n",
     "            url TEXT\n",
     "        );\n",
@@ -220,6 +228,108 @@
    "metadata": {},
    "source": [
     "## Create `sentences` table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with sqlite3.connect(f'cord19_{DATASET_VERSION}.db') as db:\n",
+    "    db.execute(\"\"\"DROP TABLE IF EXISTS sentences\"\"\")\n",
+    "    db.execute(\n",
+    "            #\"\"\"CREATE TABLE IF NOT EXISTS sentences\n",
+    "            \"\"\"CREATE TABLE sentences\n",
+    "            (\n",
+    "                sentence_id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "                sha TEXT,\n",
+    "                section_name TEXT,\n",
+    "                text TEXT,\n",
+    "                FOREIGN KEY(sha) REFERENCES article_id_2_sha(sha)\n",
+    "            );\n",
+    "            \"\"\"\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with sqlite3.connect(f'cord19_{DATASET_VERSION}.db') as db:\n",
+    "    display(pd.read_sql(\"SELECT article_id, COUNT() c FROM article_id_2_sha GROUP BY article_id ORDER BY c DESC LIMIT 5\", db))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = define_nlp()\n",
+    "all_tags_pos = 0\n",
+    "all_tags = 0\n",
+    "nb_sentences = 0\n",
+    "nb_sentences_tagged = 0 \n",
+    " \n",
+    "with sqlite3.connect(f'cord19_{DATASET_VERSION}.db') as db:\n",
+    "\n",
+    "    cur = db.cursor()\n",
+    "    for (article_id, ) in tqdm(cur.execute('SELECT article_id FROM articles')):\n",
+    "        tag, sentences = get_tag_and_sentences(db, nlp, p, article_id)\n",
+    "        all_tags_pos += tag\n",
+    "        all_tags += 1\n",
+    "        nb_sentences += len(sentences) \n",
+    "        if tag:\n",
+    "            nb_sentences_tagged += len(sentences)\n",
+    "        update_covid19_tag(db, article_id, tag)\n",
+    "        insert_into_sentences(db, sentences)\n",
+    "        if all_tags == 10:\n",
+    "            break\n",
+    "\n",
+    "    db.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_sql(\"\"\"SELECT COUNT() FROM sentences\"\"\", db)\n",
+    "#pd.read_sql(\"\"\"SELECT * FROM articles WHERE has_covid19_tag=True LIMIT 10\"\"\", db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Number of articles: ', all_tags)\n",
+    "print('Number of sentences: ', nb_sentences)\n",
+    "print('Number of articles tagged covid19: ', all_tags_pos)\n",
+    "print('Number of sentences tagged covid19: ', nb_sentences_tagged)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_sql(\"\"\"SELECT * FROM sentences\"\"\", db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_sql(\"\"\"SELECT COUNT() FROM articles WHERE has_covid19_tag=1\"\"\", db)"
    ]
   },
   {
