Adapting references to the new databases
Change the reference to the name of the tables and the corresponding
columns.

--- a/notebooks/cord19q_extra/Create_Database.ipynb
+++ b/notebooks/cord19q_extra/Create_Database.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(p / 'metadata.csv')\n",
+    "df = pd.read_csv(p / 'CORD-19-research-challenge' / 'metadata.csv')\n",
     "\n",
     "print(f'Found {len(df):,d} article entries for the CORD-19 (version {DATASET_VERSION})')"
    ]
