--- a/notebooks/cord19q_extra/Generate Sentence Embeddings - PAFE.ipynb
+++ b/notebooks/cord19q_extra/Generate Sentence Embeddings - PAFE.ipynb
@@ -50,7 +50,9 @@
    },
    "outputs": [],
    "source": [
-    "data_path = Path(\"/raid/covid_data/data/2020-04-08\")\n",
+    "DATASET_VERSION = 'v7'\n",
+    "\n",
+    "data_path = Path(\"/raid/covid_data/data/\") / DATASET_VERSION\n",
     "\n",
     "cord_path = data_path / \"CORD-19-research-challenge\"\n",
     "databases_path = data_path / \"databases\"\n",
@@ -207,7 +209,7 @@
    },
    "outputs": [],
    "source": [
-    "db_filename = str(databases_path / 'articles.sqlite')\n",
+    "db_filename = str(databases_path / 'cord19.db')\n",
     "db = sqlite3.connect(db_filename)\n",
     "curs = db.cursor()"
    ]
@@ -448,7 +450,8 @@
     "                results.append(sentence_encoding.detach().cpu().numpy())\n",
     "                \n",
     "                del tokens_tensor, segments_tensors\n",
-    "            \n",
+    "                torch.cuda.empty_cache()\n",
+    "                \n",
     "        return results"
    ]
   },
@@ -714,7 +717,9 @@
     "    arr = defaultdict(list)\n",
     "    all_ids = []\n",
     "\n",
-    "    curs.execute('SELECT Id, Text FROM sections WHERE Tags IS NOT NULL')\n",
+    "    curs.execute(\"\"\"SELECT sentence_id, text FROM sentences\n",
+    "                WHERE sha IN (SELECT sha FROM article_id_2_sha WHERE article_id IN \n",
+    "                (SELECT article_id FROM articles WHERE has_covid19_tag is True))\"\"\")\n",
     "    i = 0\n",
     "    t0 = time()\n",
     "    while True:\n",
@@ -763,7 +768,7 @@
    "source": [
     "%%time\n",
     "embedding_names = ['USE', 'SBERT', 'BSV', 'SBIOBERT']\n",
-    "embedding_models = [univsentenc_embedder, sbert_embedder, bsv_embedder, bio_embedder]\n",
+    "embedding_models = [univsentenc_embedder, sbert_embedder, bsv_embedder, bio_embedder2]\n",
     "for embedding_name, embedding_model in zip(embedding_names, embedding_models):\n",
     "    create_sentence_embeddings(embedding_name=embedding_name,\n",
     "                               embedding_model=embedding_model,\n",
@@ -789,6 +794,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -807,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
