--- a/notebooks/search_widget.ipynb
+++ b/notebooks/search_widget.ipynb
@@ -63,7 +63,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = pathlib.Path(\"/raid/covid_data/data/2020-04-08\")\n",
+    "DATASET_VERSION = 'v7'\n",
+    "\n",
+    "data_path = pathlib.Path(\"/raid/covid_data/data/\") / DATASET_VERSION\n",
     "assets_path = pathlib.Path(\"/raid/covid_data/assets\")"
    ]
   },
@@ -93,6 +95,13 @@
     "bbs_widget = bbs.widget.Widget(all_data, all_models)\n",
     "bbs_widget.display()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
