--- a/notebooks/mining_pipeline.ipynb
+++ b/notebooks/mining_pipeline.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# End-to-end mining pipeline\n",
+    "# <center>End-to-end mining pipeline</center>\n",
     "\n",
     "**! WARNING !**\n",
     "One needs to make sure that `scibert` repository is in the PYTHONPATH and its dependencies (as per `requirements.txt`) are in your env\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,24 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d840c9c6ef804929ad39f42bb042bb16",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Textarea(value='Autophagy maintains tumour growth through circulating arginine. Autophagy captu…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define widgets\n",
     "bbs_widgets = OrderedDict()\n",
