Change sample texts in demo notebook

--- a/notebooks/demo_attribute_extraction.ipynb
+++ b/notebooks/demo_attribute_extraction.ipynb
@@ -63,10 +63,9 @@
    "outputs": [],
    "source": [
     "texts = [\n",
-    "    \"In SARS-CoV-2, the S protein is particularly highly glycosylated, with 22 sites of N-glycosylation per monomer, holding mostly complex glycans, and ~30% HM-type (Watanabee, 2020). The proper glycosylation of the spike, is required in many functions of the virus such as structural shape, host recognition and binding as well as viral entry.\",\n",
-    "    \"Comorbidities were present in nearly half of patients, with hypertension being the most common comorbidity, followed by diabetes and coronary heart disease (table 1). The most common symptoms on admission were fever and cough, followed by sputum production and fatigue (table 1). Lymphocytopenia occurred in 77 (40%) patients. 181 (95%) patients received antibiotics and 41 (21%) received antivirals (lopinavir/ritonavir; table 2). Systematic corticosteroid and intravenous immunoglobulin use differed significantly between non-survivors and survivors (table 2). The comparison of characteristics, treatment, and outcomes of patients from the two hospitals are shown in the appendix (pp 2–4). \",\n",
-    "    \"Similarly, other literature recently published in this population also showed that the increasing odds of in-hospital death associated with older age, the presence of underlying diseases, elevated inflammatory, and d-dimer greater than 1 μg/ml on admission.\",\n",
-    "    \"Fifty to 500 ng of poly(A)-RNA from HCV 229E-infected MRC-5 cells were used for reverse transcription in a volume of 20 ml with 1 ml (200 U) SuperScript II reverse transcriptase (Life Technologies), 4 ml of 51 first-strand buffer (Life Technologies), 2 ml of 10 mM dNTPs, 2 ml of 0.1 M DTT, 0.5 ml of RNasin (50 U/ml) (Pharmacia), and 30-100 ng of oligonucleotide primer (Table 1, Fig. 2 ).\",\n",
+    "    \"To a stirred solution of 39 (108 mg) in THF (2 mL) was added 1 M THF solution of TBAF-AcOH (1:1, 300 lL, 0.30 mmol) at ice-water temperature, and the mixture was stirred at the same temperature for 1 h and then at room temperature for 5 h. The solvent was removed under reduced pressure, and the resultant residue was purified by preparative thin layer chromatography (Merck, 113895) (methanol/chloroform, 1:10) to give 20 (181 mg, 34% from 38) as a colorless oil.\",\n",
+    "    \"The first generation of selective inhibitors for ACE2 have been designed and synthesised (table 1) [15, 16] . A series of non-peptide compounds were constructed based upon the ACE2 substrate consensus P-X(1-3)-P 1 -fl-X hydrophobic and the requirement of a centrally located carboxylate to co-ordinate with the zinc ion [15] . This lead resulted in the synthesis of an inhibitor (MLN-4760, table 1) possessing sub-nanomolar affinity (IC 50 , 50% inhibitor concentration 0.44 nM) for ACE2 and 220,000-and 22,000fold less affinity for human tACE and bovine carboxypeptidase A, respectively [15] .\",\n",
+    "    \"We extended our validated protocol to assess the delivery of aerosolized yeast and spores. Eight A/Jcr mice per group were exposed to aerosolized H99 (a), KN99 (a), or a yeast-spore mixture obtained from mated mixtures in the whole-body exposure chamber for one hour at standardized aerobiology conditions (13 lpm air flow-rate, 19 PSI, and 70% RH). Four mice per group were humanly euthanized and lung, spleen, and brain tissues were sterilely collected at one hour and three weeks post exposure and CFUs were determined as previously described.\",\n",
     "]"
    ]
   },
@@ -92,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = texts[-1]"
+    "text = texts[0]"
    ]
   },
   {
