Fix bug in ner_errors + incorporate Stan feedback

--- a/notebooks/NER_Evaluation.ipynb
+++ b/notebooks/NER_Evaluation.ipynb
@@ -28,7 +28,7 @@
     "import pandas as pd\n",
     "import spacy\n",
     "\n",
-    "from bbsearch.mining.eval import prodigy2df, spacy2df, unique_etypes, plot_ner_confusion_matrix, ner_report\n",
+    "from bbsearch.mining.eval import prodigy2df, spacy2df, unique_etypes, plot_ner_confusion_matrix, ner_report, ner_errors\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
@@ -127,8 +127,7 @@
     "    model_df = []\n",
     "\n",
     "    for source, df_ in df.groupby('source'):\n",
-    "        if not np.all(df_['id'].values[:-1] <= df_['id'].values[1:]):\n",
-    "            df_.sort_values(by='id', inplace=True, ignore_index=True)\n",
+    "        df_ = df_.sort_values(by='id', inplace=False, ignore_index=True)\n",
     "        df_sentence = spacy2df(spacy_model=ner_model, ground_truth_tokenization=df_['text'].to_list())\n",
     "        df_sentence['id'] = df_['id'].values\n",
     "        df_sentence['source'] = source\n",
@@ -153,12 +152,16 @@
    "source": [
     "## NER Evaluation\n",
     "\n",
-    "The following NER evaluation functions have a parameter <code> mode </code> which can take one of the two following values.\n",
+    "The following NER evaluation functions have a parameter <code>mode</code> which can take one of the two following values.\n",
     "<ul>\n",
     "    <li><code>\"token\"</code>: Each token is considered separately, and only the enity type (e.g. <code>\"DISEASE\"</code>) of annotations is considered, without considering the full IOB annotations (e.g. <code>\"B-DISEASE\"</code>).</li>\n",
     "    <li><code>\"entity\"</code>: Entities are considered as units, even if they cover a span of several tokens. A True Positive is defined as two entity annotations matching exactly from the first to the last token of the span.</li>\n",
     "\n",
-    "</ul>"
+    "</ul>\n",
+    "\n",
+    "<div>\n",
+    "<strong>Note.</strong> For the purpose of the evaluations shown in this section, we will consider the evaluations of <code>EmmanuelleLogette</code> as the ground truth. The resports are therefore produced with respect to the labels used by this annoator.\n",
+    "</div>"
    ]
   },
   {
@@ -225,13 +228,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### <code>ner_errors</code>: show false negatives and false positives\n",
+    "\n",
+    "<strong>Note.</strong> For reasons of space, we only print results relative to one entity type, but you can change the value of <code>\"ETYPE\"</code> to see the other results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ETYPE = 'CELL_TYPE'\n",
+    "\n",
+    "iob_true = df[f'class_{annotators[0]}']\n",
+    "\n",
+    "for mode in ('token', 'entity'):\n",
+    "    for annotator_pred in (annotators[1], SCISPACY_MODELS[0]):\n",
+    "        print(f'Annotations {annotator_pred} [mode = {mode}]')\n",
+    "        iob_pred = df[f'class_{annotator_pred}']\n",
+    "        if annotator_pred in SCISPACY_MODELS:\n",
+    "            results_dict = ner_errors(iob_true, iob_pred, mode=mode, return_dict=True, \n",
+    "                             etypes_map={'CHEMICAL': 'CHEBI',\n",
+    "                                         'CELL_TYPE': 'CL',\n",
+    "                                         'ORGANISM': 'TAXON',\n",
+    "                                         'PROTEIN': 'GGP'},\n",
+    "                            tokens=df.text)\n",
+    "        else:\n",
+    "            results_dict = ner_errors(iob_true, iob_pred, mode=mode, return_dict=True, tokens=df.text)\n",
+    "        print(f'------Entity type: {ETYPE}------')\n",
+    "        print(f'--- False Negatives ---')\n",
+    "        print(' '.join(repr(s) for s in results_dict[ETYPE]['false_neg']))\n",
+    "        print(f'--- False Positives ---')\n",
+    "        print(' '.join(repr(s) for s in results_dict[ETYPE]['false_pos']))\n",
+    "        print()\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### <code>ner_confusion_matrix</code>: breakdown ner predictions against ground truth\n",
     "\n",
     "<div>\n",
     "<strong>Note.</strong> The function <code>plot_ner_confusion_matrix</code> is just a wrapper around <code>ner_confusion_matrix</code>.\n",
     "</div>\n",
     "<div>\n",
-    "<strong>Note.</strong> The normalization parameter <code>normalize</code> can take 3 possible values: <code>None, \"true\", \"pred\"</code>.\n",
+    "<strong>Note.</strong> The normalization parameter <code>normalize</code> can take 4 possible values: <code>None, \"true\", \"pred\", \"all\"</code>.\n",
     "</div>"
    ]
   },
@@ -248,7 +292,7 @@
     "\n",
     "    f, ax = plt.subplots(1, 2, figsize=(12, 6))\n",
     "    for ax_, mode in zip(ax, ('token', 'entity')):\n",
-    "        plot_ner_confusion_matrix(iob_true, iob_pred, mode=mode, ax=ax_, normalize='true')\n",
+    "        plot_ner_confusion_matrix(iob_true, iob_pred, mode=mode, ax=ax_, normalize=None)\n",
     "        ax_.set_title(f'{annotator_pred} [mode = {mode}]')\n",
     "    f.tight_layout()"
    ]
