Add remove_punctuation() to NER eval notebook

--- a/notebooks/NER_Evaluation.ipynb
+++ b/notebooks/NER_Evaluation.ipynb
@@ -28,7 +28,8 @@
     "import pandas as pd\n",
     "import spacy\n",
     "\n",
-    "from bbsearch.mining.eval import prodigy2df, spacy2df, unique_etypes, plot_ner_confusion_matrix, ner_report, ner_errors\n",
+    "from bbsearch.mining.eval import (prodigy2df, spacy2df, unique_etypes, plot_ner_confusion_matrix, \n",
+    "                                  ner_report, ner_errors, remove_punctuation)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
@@ -161,7 +162,20 @@
     "\n",
     "<div>\n",
     "<strong>Note.</strong> For the purpose of the evaluations shown in this section, we will consider the evaluations of <code>EmmanuelleLogette</code> as the ground truth. The resports are therefore produced with respect to the labels used by this annoator.\n",
+    "</div>\n",
+    "\n",
+    "<div>\n",
+    "<strong>Note.</strong> Annotation of punctuation elements as parts of an entity can orginiate from small mistakes in the manual labeling process. For this reason, we can remove all punctuation elements by calling <code>remove_punctuation()</code>.\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = remove_punctuation(df)"
    ]
   },
   {
