Fix import in usage example notebook

--- a/notebooks/STS_evaluation.ipynb
+++ b/notebooks/STS_evaluation.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sqlalchemy\n",
     "from bbsearch.ml.sts import *"
    ]
   },
@@ -39,8 +40,8 @@
    "source": [
     "%%time\n",
     "\n",
-    "n=5\n",
-    "groups=5\n",
+    "n = 5\n",
+    "groups = 5\n",
     "kwargs = dict(step=1, power=6)\n",
     "\n",
     "sampling = sampling_mock\n",
