Add a real sample strategy

--- a/notebooks/STS_evaluation.ipynb
+++ b/notebooks/STS_evaluation.ipynb
@@ -18,18 +18,14 @@
    "source": [
     "%%time\n",
     "\n",
-    "source='cord19_v35'\n",
+    "version='cord19_v35'\n",
     "\n",
-    "print('loading model...')\n",
     "model = load_model_bsv()\n",
+    "embeddings = load_embeddings_bsv(version)\n",
+    "engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:guest@dgx1.bbp.epfl.ch:8853/{version}')\n",
+    "limit = sentences_count(engine)\n",
     "\n",
-    "print('loading embeddings...')\n",
-    "embeddings = load_embeddings_bsv(source)\n",
-    "\n",
-    "print('creating connection...')\n",
-    "engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:guest@dgx1.bbp.epfl.ch:8853/{source}')\n",
-    "\n",
-    "# 50 secs"
+    "# ~ 45 secs"
    ]
   },
   {
@@ -40,17 +36,18 @@
    "source": [
     "%%time\n",
     "\n",
-    "n = 5\n",
+    "n = 20\n",
     "groups = 5\n",
-    "kwargs = dict(step=1, power=6)\n",
     "\n",
-    "sampling = sampling_mock\n",
-    "pairing = pairing_powerlaw\n",
+    "sstrategy = sampling_random\n",
+    "sparams = dict(limit=limit, seed=3179)\n",
     "\n",
-    "print('pairing sentences...')\n",
-    "pairs = pair_sentences(model, embeddings, engine, sampling, pairing, n, groups, **kwargs)\n",
+    "pstrategy = pairing_powerlaw\n",
+    "pparams = dict(step=1, power=6)\n",
     "\n",
-    "# 15 secs"
+    "pairs = pair_sentences(n, groups, sstrategy, sparams, pstrategy, pparams, model, embeddings, engine)\n",
+    "\n",
+    "# ~ 15 secs"
    ]
   },
   {
@@ -59,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in pairs[:10]:\n",
+    "for x in pairs[:groups]:\n",
     "    print(f'{x.left.text}\\n--- {x.target}  {x.similarity:.2f} ---\\n{x.right.text}\\n')"
    ]
   },
